--- a/workout-app/front/src/components/ui/Counters/Counters.module.scss
+++ b/workout-app/front/src/components/ui/Counters/Counters.module.scss
@@ -9,7 +9,7 @@
         font-size: 24px;
         text-align: center;
         .heading{
-            color: $purple;
+            color: $white;
             text-transform: capitalize;
         }
         .number{
