Page workouts create

--- a/workout-app/front/src/scss/index.scss
+++ b/workout-app/front/src/scss/index.scss
@@ -1,7 +1,7 @@
 @import './variables';
 
 body{
-    background-color: $dark-purple;
+    background-color: $black;
     padding: 0;
     margin: 0;
 	color: #fff;
