--- a/workout-app/front/src/components/common/Layout.module.scss
+++ b/workout-app/front/src/components/common/Layout.module.scss
@@ -1,9 +1,11 @@
+@import '../../scss/variables';
+
 .wrapper{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     
-    height: 890px;
+    height: 100%;
     max-width: 560px;
     width: '100%';
 
@@ -12,8 +14,17 @@
 
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center; 
 
-    
-   
+    &.otherPage{
+        height: 280px;
+        border-radius:0 0 20px 20px;
+        box-shadow: $bx-accent;
+    }
+}
+.heading{
+    text-transform: uppercase;
+    color: $white;
+    font-size: 30px;
+    font-weight: bold;
 }
