--- a/workout-app/front/src/components/ui/Feild/Feild.module.scss
+++ b/workout-app/front/src/components/ui/Feild/Feild.module.scss
@@ -7,10 +7,11 @@
     font-size: 16px;
     padding: 14px;
     border-radius: 10px;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     outline: none;
+    width: 100%;
     &:focus{
-        border-color: rgba($accent, .3);
+        border-color: rgba($accent, 0.3);
     }
     &::placeholder{
         color: #946E86;
