--- a/workout-app/front/src/scss/index.scss
+++ b/workout-app/front/src/scss/index.scss
@@ -80,3 +80,70 @@ img {
 #root{
     height: 100%;
 }
+.select2-selection{
+	&__control{
+		cursor: pointer !important;
+		margin-bottom: 2rem;
+		border-radius: 10px !important;
+		min-height: 48px !important;
+		background-color: $purple !important;
+		border: 1px solid transparent !important;
+		color: $white;
+		font-size: 16px;
+		outline: none;
+		width: 100%;
+		&--is-focused {
+			border-color: transparent !important;
+			box-shadow: 0 0 0 1px rgba($accent, 0.3) !important;
+		}
+	}
+	&__menu{
+		background-color: $purple !important;
+		border-radius: 10px !important;
+		&-list {
+			padding: 0px !important;
+			border-radius: 10px !important;
+		}
+		&-notice{
+			color: #946E86 !important;
+		}
+	}
+	
+	&__option{
+		&--is-focused{
+			background-color: darken($purple, 7%) !important;
+		}
+		&--is-selected {
+			background-color: darken($purple, 8%) !important;
+		}
+	}
+	&__indicator,
+	&__indicator:hover{
+		color: $white !important;
+	}
+	&__palceholder{
+		color: #946E86 !important;
+		margin-left: 6px !important;
+	}
+	&__single-value {
+		color: $white !important;
+	}
+	&__multi-value{
+		border-radius: 6px !important;
+		background-color: lighten($purple, 7%) !important;
+
+		&__label{
+			color: $white !important;
+		}
+
+		&__remove:hover{
+			background-color: #8b2557 !important;
+			color: $white !important;
+		}
+
+	}
+	&__input{
+		color: $white !important;
+	}
+}
+
