--- a/workout-app/front/src/scss/index.scss
+++ b/workout-app/front/src/scss/index.scss
@@ -121,7 +121,7 @@ img {
 	&__indicator:hover{
 		color: $white !important;
 	}
-	&__palceholder{
+	&__placeholder{
 		color: #946E86 !important;
 		margin-left: 6px !important;
 	}
@@ -145,5 +145,17 @@ img {
 	&__input{
 		color: $white !important;
 	}
+	
 }
-
+.dark-link{
+	text-align: right;
+	width: 100%;
+	display: block;
+	margin-bottom: 0.7rem;
+	text-decoration: none;
+	color: $purple;
+	transition: color .3s ease;
+	&:hover{
+		color: darken($accent, 10%);
+	}
+}
